# obelisk

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  obelisk.code-workspace
Obelisk/: Obelisk.sln  Readme.md
Obelisk/ObeliskCore/: LazyEval.hpp  MemoizedValue.h  MultiVector.hpp  ObeliskCore.vcxitems  ObeliskCore.vcxitems.filters  PlatformSpecific.cpp  StackVector.hpp  StringFuncs.cpp  StringFuncs.h  VectorT.h
Obelisk/ObeliskExperiments/: Logging.cpp  Logging.h  ObeliskExperiments.cpp  ObeliskExperiments.vcxproj  ObeliskExperiments.vcxproj.filters  ThreadLimits.cpp  ThreadLimits.h
Obelisk/ObeliskTest/: ContainerMakerTests.cpp  ContainerUtilTests.cpp  DataSourceTest.cpp  HeapArrayTest.cpp  ImageFilterTests.cpp  LazyEvalTest.cpp  MemoizedValueTest.cpp  MultiVectorTests.cpp  ObeliskTest.vcxproj  ObeliskTest.vcxproj.filters  ObserverPatternCallbackTests.cpp  ObserverPatternCallbackTests.h  OctreeTests.cpp  OptionalTest.cpp  StackVectorTest.cpp  StringFuncTests.cpp  stdafx.cpp
cmake/: obelisk-config-internal.cmake  obelisk-config.cmake.in
examples/: CMakeLists.txt
examples/print_directories/: CMakeLists.txt  main.cpp
examples/thread_support_wrappers/: CMakeLists.txt  main.cpp
include/obelisk/: ArrayParamCalc.hpp  BackBuffer.hpp  BackgroundContainerProducer.hpp  BackgroundThreadDeleter.hpp  Box.hpp  ConcurrentQueueT.hpp  ContainerUtils.hpp  DistributionFunctions.hpp  FormatString.hpp  GeneralHelpers.hpp  HeapArray.hpp  ImageFilters.hpp  LockUtilsT.hpp  MemoizedValue.hpp  MultiVector.hpp  Octree.hpp  Optional.hpp  PlatformSpecific.h  SortedIterable.hpp  StackVector.hpp  StdThreadSupportWrappers.h  TypeHelpers.hpp
include/obelisk/observer/: AsyncEvent.hpp  AsyncEventQueue.hpp  Event.hpp  EventBase.hpp  EventObserver.hpp  SubjectWithEvents.hpp
src/: CMakeLists.txt  PlatformSpecific.cpp  PlatformSpecificMac.h  PlatformSpecificWin.h  SimpleAsyncTask.cpp  StdThreadSupportWrappers.cpp  StringFuncs.cpp
tests/: ArrayParamCalcTests.cpp  BackBufferTests.cpp  BackgroundContainerProducerTests.cpp  BackgroundThreadDeleterTests.cpp  CMakeLists.txt  ColourStructsTests.cpp  ConcurrentQueueTests.cpp  ContainerMakerTests.cpp  ContainerUtilTests.cpp  HeapArrayTest.cpp  ImageFilterTests.cpp  LockUtilsTests.cpp  MemoizedValueTest.cpp  MultiVectorTests.cpp  MutexedObjectTests.cpp  ObserverPatternCallbackTests.cpp  ObserverPatternCallbackTests.h  OctreeTests.cpp  OptionalTest.cpp  SimpleAsyncTaskTests.cpp  SortedIterableTests.cpp  StackVectorTest.cpp  StringFuncTests.cpp  TestHelpers.hpp
